--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
                     <h4>Instructions</h4>
                   </div>
                   <div class="modal-body">
-                    <p>1. Adjust your laptop screen to be straight.</p>
-                    <p>2. Walk a few steps away from your computer's camera.</p>
-                    <p>3. Move your left wrist up and down in front of the camera, and a red dot should appear.</p>
-                    <p>4. Press the start button when ready. </p>
-                    <p>5. The "paddle" will now move accordingly to your wrist.</p>
+                    <ol>
+                      <li>1. Adjust your laptop screen to be straight.</li>
+                      <li>2. Walk a few steps away from your computer's camera.</li>
+                      <li>3. Move your left wrist up and down in front of the camera, and a red dot should appear.</li>
+                      <li>4. Press the start button when ready. </li>
+                      <li>5. The "paddle" will now move accordingly to your wrist.</li>
+                    </ol>
                   </div>
                 </div>
               </div>
