--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                   </div>
                   <div class="modal-body">
                     <ol>
-                      <li>1. Adjust your laptop screen to be straight.</li>
-                      <li>2. Walk a few steps away from your computer's camera.</li>
-                      <li>3. Move your left wrist up and down in front of the camera, and a red dot should appear.</li>
-                      <li>4. Press the start button when ready. </li>
-                      <li>5. The "paddle" will now move accordingly to your wrist.</li>
+                      <li> Adjust your laptop screen to be straight.</li>
+                      <li> Walk a few steps away from your computer's camera.</li>
+                      <li> Move your left wrist up and down in front of the camera, and a red dot should appear.</li>
+                      <li> Press the start button when ready. </li>
+                      <li> The "paddle" will now move accordingly to your wrist.</li>
                     </ol>
                   </div>
                 </div>
